--- a/feedback/src/main/resources/application.properties
+++ b/feedback/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url=jdbc:postgresql://feedback-db-svc:15432/feedback
+spring.datasource.username=developer
+spring.datasource.password=developer
+spring.datasource.driver-class-name=org.postgresql.Driver
