依存関係とbuildは別にした

--- a/environments/app/Dockerfile
+++ b/environments/app/Dockerfile
@@ -1,6 +1,8 @@
 FROM maven:3.8.5-openjdk-17-slim as builder
-COPY src/ src/
 COPY pom.xml .
+RUN mvn dependency:resolve dependency:resolve-plugins
+
+COPY src/ src/
 RUN mvn package
 
 FROM openjdk:17-jdk-buster
