--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -42,13 +42,29 @@ jobs:
           kubectl get po -n feedback
 
       - name: Build image and push
-        run: |
-          skaffold build -t ${{ github.sha }} -q --push > build.json
+        uses: hiberbee/github-action-skaffold@1.17.0
+        with:
+          command: build -t ${{ github.sha }} -q --push > build.json
+          tag: ${{ github.sha }}
+          push: true
+          working-directory: ./360feedback/environments/app
+
+#        run: |
+#          cd 360feedback/environments/app
+#          skaffold build -t ${{ github.sha }} -q --push > build.json
 
       - name: Deploy
-        run: |
-          skaffold deploy -n feedback --build-artifacts=build.json
+        uses: hiberbee/github-action-skaffold@1.17.0
+        with:
+          command: deploy -p prd -n feedback --build-artifacts=build.json
+          tag: ${{ github.sha }}
+          push: true
+          working-directory: ./360feedback/environments/app
 
+#        run: |
+#          cd 360feedback/environments/app
+#          skaffold deploy -p prd -n feedback --build-artifacts=build.json
+#
       - name: run kubectl
         run: |
           kubectl get po -n feedback
