--- a/environments/app/skaffold.yaml
+++ b/environments/app/skaffold.yaml
@@ -8,14 +8,12 @@ build:
       dockerfile: ../environments/app/Dockerfile
   local:
     useBuildkit: true
-profiles:
-- name: prd
-  deploy:
-    helm:
-      releases:
-      - name: feedback-api
-        chartPath: charts
-        setValues:
-          imagePullPolicy: Always
-        artifactOverrides:
-          image: 839217260075.dkr.ecr.ap-northeast-1.amazonaws.com/feedback/feedback-api
+deploy:
+  helm:
+    releases:
+    - name: feedback-api
+      chartPath: charts
+      valuesFiles:
+      - '{{ .VALUE_FILE }}'
+      artifactOverrides:
+        image: 839217260075.dkr.ecr.ap-northeast-1.amazonaws.com/feedback/feedback-api
