--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -65,11 +65,15 @@ jobs:
           skaffold build -t ${{ github.sha }} -q --push > build_front.json
 
       - name: Deploy to api
+        env:
+          VALUE_FILE: 'charts/values.yaml'
         run: |
           cd environments/app
           skaffold deploy -p prd -n feedback --build-artifacts=build_api.json
 
       - name: Deploy to front
+        env:
+          VALUE_FILE: 'charts/values.yaml'
         run: |
           cd environments/front
           skaffold deploy -p prd -n feedback --build-artifacts=build_front.json
