--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -23,6 +23,8 @@ jobs:
 
       - name: Install kubectl
         uses: azure/setup-kubectl@v2.1
+        with:
+          version: 1.23.6
 
       - name: udpate kubeconfig
         env:
