istioのルーティング設定を変更

--- a/environments/istio/app/charts/templates/virtualservice.yaml
+++ b/environments/istio/app/charts/templates/virtualservice.yaml
@@ -45,7 +45,7 @@ spec:
           number: 18080
   - match:
     - uri:
-        prefix: "/feedback-front"
+        prefix: "/"
     rewrite:
       uri: "/"
     route:
