--- a/.github/workflows/deploy_skaffold_run.yaml
+++ b/.github/workflows/deploy_skaffold_run.yaml
@@ -67,6 +67,7 @@ jobs:
 
       - name: Deploy to front
         env:
+          API_ENDPOINT: ${{ secrets.API_ENDPOINT }}
           VALUE_FILE: 'charts/valuesPrd.yaml'
         run: |
           cd environments/front
